fix: video z-index issue with nav

--- a/styles.css
+++ b/styles.css
@@ -106,13 +106,18 @@ a.header-sub.small:hover {
   right: 0;
   width: 40%;
   opacity: 0.7;
-  z-index: 1000;
+}
+
+video {
+  position: relative;
 }
 
 nav {
   display: block;
   background-color: var(--light-blue);
   box-shadow: 3px 3px 3px var(--mid-grey-blue);
+  z-index: 5000;
+  position: relative;
 }
 
 nav ul {
@@ -167,17 +172,16 @@ h2 {
   margin-left: calc(2% + 5px);
 }
 
-section.address-box {
-  font-size: 3rem;
-  position: absolute;
+address {
+  position: sticky;
   bottom: 0;
-  z-index: -1;
-  font-size: 3rem;
-  line-height: 3rem;
+  z-index: -200;
+  font-size: 2rem;
+  line-height: 2rem;
   padding: 1%;
-  margin: 1%;
+  margin: 1% 10% 1% 1%;
   font-family: "BenchNine-Bold";
-  color: var(--strong-blue);
+  color: var(--mid-blue);
   text-align: left;
 }
 
@@ -204,7 +208,7 @@ img-text-box img {
 img-text-box h3 {
   margin-top: 1%;
   margin-left: 0;
-  position: absolute;
+  position: sticky;
   width: 7%;
   text-align: center;
   font-size: 1.1rem;
@@ -375,6 +379,11 @@ section {
 
 section.flex-info-box {
   background-color: var(--light-blue);
+}
+
+section.flex-video-box {
+  background-color: var(--light-blue);
+  z-index: -100;
 }
 
 form {
